[package]
name = "eisenbeton-rust"
version = "0.1.0"
authors = ["reshef"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
flatbuffers = "0.8.1"
async-nats = "0.9.1"
warp = "0.2.5"